--- a/request-demo.html
+++ b/request-demo.html
@@ -109,6 +109,18 @@
                                 <input type="text" name="member-login-number" id="member-login-number" class="form-control" placeholder="example@mail.com" required>
                             </div>
 
+                            <div class="mb-4">
+                                <label class="form-label mb-2" for="member-login-password">Address</label>
+
+                                <input type="text" name="member-login-number" id="member-login-number" class="form-control" placeholder="Enter contact address" required>
+                            </div>
+
+                            <div class="mb-4">
+                                <label class="form-label mb-2" for="member-login-password">Phone Number</label>
+
+                                <input type="number" name="member-login-number" id="member-login-number" class="form-control" placeholder="+234" required>
+                            </div>
+
                             <!-- <div class="form-check mb-4">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                               
@@ -339,3 +351,4 @@
 
     </body>
 </html>
+
